Closed Bug 1648095 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::SharedStyleSheetCache::StartDeferredLoadsForLoader]

Categories

(Core :: CSS Parsing and Computation, defect, P2)

79 Branch
defect

Tracking

()

VERIFIED FIXED
mozilla79
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox77 --- unaffected
firefox78 --- unaffected
firefox79 + verified

People

(Reporter: calixte, Assigned: emilio)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: assertion, crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-983fed1b-f860-407d-b12f-8770c0200624.

Top 10 frames of crashing thread:

0 libxul.so mozilla::SharedStyleSheetCache::StartDeferredLoadsForLoader layout/style/SharedStyleSheetCache.cpp:168
1 libxul.so mozilla::css::Loader::NotifyObservers layout/style/Loader.cpp:1543
2 libxul.so mozilla::SharedStyleSheetCache::LoadCompleted layout/style/SharedStyleSheetCache.cpp:279
3 libxul.so mozilla::MozPromise<bool, bool, true>::ThenValue<mozilla::css::Loader::ParseSheet xpcom/threads/MozPromise.h:769
4 libxul.so mozilla::MozPromise<bool, bool, true>::ThenValueBase::ResolveOrRejectRunnable::Run xpcom/threads/MozPromise.h:410
5 libxul.so mozilla::SchedulerGroup::Runnable::Run xpcom/threads/SchedulerGroup.cpp:146
6 libxul.so nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1234
7 libxul.so mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:87
8 libxul.so MessageLoop::Run ipc/chromium/src/base/message_loop.cc:290
9 libxul.so nsBaseAppShell::Run widget/nsBaseAppShell.cpp:137

There are 19 crashes (from 5 installations) in nightly 79 with buildid 20200623213840. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1645122.
The moz_crash reason is always MOZ_DIAGNOSTIC_ASSERT(curr->mLoader->mPendingLoadCount) (Where did this pending load come from?)

[1] https://hg.mozilla.org/mozilla-central/rev?node=d07d66ecd6b9

Flags: needinfo?(emilio)
Severity: -- → S3
Keywords: assertion

I can reproduce this by session-restoring multiple 4chan tabs (taken an url from a crash report).

I'll take a look, thanks Calixte!

Assignee: nobody → emilio
Flags: needinfo?(emilio)
Component: ImageLib → CSS Parsing and Computation
Priority: -- → P2

When we call into LoadSheet when starting pending loads for a given
loader, it may be the case that the original loader may still not care
about the load. However some other loader will, so we can't defer this.

This was also causing our state to get out of sync, because if this
happened, then we'd fail to account for it in other loaders.

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/aedc5ef40524 Don't defer the same sheet load twice. r=heycam
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
Flags: qe-verify+

Hey Calixte,
I cannot reproduce this issue on the mentioned build (20200623213840). Tried using Emilio's method with 4chan but still can't repro it.
Do you have more specific steps on how to repro the crash?
Can you please check if this issue is fixed on your end using the latest build?

Flags: needinfo?(cdenizet)

Open multiple 4chan tabs in the browser. Press Ctrl+F5 on one, then quickly move to the next and do the same, etc. You should eventually see the tabs crash.

(In reply to Andrei Purice from comment #6)

Hey Calixte,
I cannot reproduce this issue on the mentioned build (20200623213840). Tried using Emilio's method with 4chan but still can't repro it.
Do you have more specific steps on how to repro the crash?
Can you please check if this issue is fixed on your end using the latest build?

I've no idea on how to reproduce this crash (see Emilio's comment for the STR).

Flags: needinfo?(cdenizet)

Reproduced in 79.0a1 (20200623213840) using Emilio's steps on Windows 10.
Verified Fixed in 79.0b2 (20200630191632) and Nightly 80.0a1 (20200702094606) on Windows 10.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: